# server-sent-events-tutorial

./: .gitignore  README.md  pyproject.toml
1_sse_on_sockets/: client.py  main.py  server.py
1_sse_via_sockets/: server.py
2_sse_via_flask/: client.py  main.py  server.py
3_sse_via_starlette/: client.py  server.py
4_sse_via_fastapi/: main.py  server.py
5_sse_via_browser/: browser.js  index.html  main.py  package-lock.json  package.json  server.py
