[project]
name = "sse-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.2",
    "flask>=3.1.2",
    "httpx>=0.28.1",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "starlette>=0.49.3",
    "uvicorn>=0.38.0",
]
